# 2023-tfg-adrian-madinabeitia

./: .gitignore  Dockerfile  HOWTODOCKER  README.md  docker-compose.yaml  entrypoint.bash  install.sh  profiling_data.txt  profiling_image.txt  requeriments.txt  sub_timestamps.npy  vel_timestamps.npy
drone_sim_driver/: CMakeLists.txt  package.xml
drone_sim_driver/config/: tmuxLaunch.yml  world.json
drone_sim_driver/launch/: as2_sim_circuit.launch.py  as2_sim_gates.launch.py  as2_sim_ocean.launch.py  expertPilot.launch.py  neuralPilot.launch.py  remoteContol.launch.py
drone_sim_driver/rviz/: 1personView.rviz
drone_sim_driver/sim_assets/boat_beacon/meshes/: battery.dae
drone_sim_driver/sim_assets/ocean/: model.sdf
drone_sim_driver/sim_assets/ocean/meshes/: sea_surface_1000m_x_1000m.dae
drone_sim_driver/src/: control_functions.py  data.py  generateGateWorld.py  train.py
drone_sim_driver/src/dataset/: data.py  droneExpertPilot.py  get_gates_vel.py  image_filter_gates.py  image_filter_node.py  oldData.py  remoteControl.py
drone_sim_driver/src/features/: rosbag2generalDataset.py
drone_sim_driver/src/models/: droneNeuralPilot.py  models.py  oldTrain.py  train.py  transforms.py
drone_sim_driver/src/visualization/: datasetGraphic.py  datasetGraphicDeepPilot.py  graphOnlyPath.py  plotFrecuency.py  plotVels.py
drone_sim_driver/utils/: checkNeuralFolder.sh  general_timestamps.npy  generateDataset.sh  netCheckpointSaver.sh  trainAndCheck.sh  vel_timestamps.npy
drone_sim_driver/worlds/: generatedWorld.world  montmelo_line.world  ocean.world
src/drone/: CMakeLists.txt  package.xml
src/drone/launch/: ocean_simulation.launch.py  prueba.launch.py
src/drone/models/: Readme.md
src/drone/models/boat_beacon/: boat_beacon.sdf  model.config
src/drone/models/boat_beacon/meshes/: body.dae
src/drone/models/ocean/: model.config
src/drone/models/tello/meshes/: iris.stl  iris_prop_cw.dae
src/drone/worlds/: ocean_simulation.world
src/drone_driver/: CMakeLists.txt  package.xml
src/drone_driver/config/: motion_controller.yaml  parse.py  platform_config.yaml  state_estimator_config.yaml  world.json
src/drone_driver/include/: control_functions.py  data.py  models.py  process_data.py  train.py
src/drone_driver/include/runs/Oct30_19-30-31_madport/: events.out.tfevents.1698690631.madport.88212.0
src/drone_driver/include/runs/Oct30_19-30-50_madport/: events.out.tfevents.1698690650.madport.88282.0
src/drone_driver/include/runs/Oct30_19-31-26_madport/: events.out.tfevents.1698690686.madport.88338.0
src/drone_driver/include/runs/Oct30_19-31-45_madport/: events.out.tfevents.1698690705.madport.88354.0
src/drone_driver/include/runs/Oct30_19-34-53_madport/: events.out.tfevents.1698690893.madport.6874.0
src/drone_driver/include/runs/Oct30_21-48-46_madport/: events.out.tfevents.1698698926.madport.35413.0
src/drone_driver/include/runs/Oct30_21-50-40_madport/: events.out.tfevents.1698699040.madport.35660.0
src/drone_driver/include/runs/Oct30_21-51-19_madport/: events.out.tfevents.1698699079.madport.35841.0
src/drone_driver/include/runs/Oct30_21-52-18_madport/: events.out.tfevents.1698699138.madport.35932.0
src/drone_driver/include/runs/Oct30_21-53-01_madport/: events.out.tfevents.1698699181.madport.36044.0
src/drone_driver/include/runs/Oct30_21-53-44_madport/: events.out.tfevents.1698699224.madport.36142.0
src/drone_driver/include/runs/Oct30_21-54-12_madport/: events.out.tfevents.1698699252.madport.36248.0
src/drone_driver/launch/: as2_sim_circuit.launch.py  as2_sim_ocean.launch.py  as2_simulation.launch.py  as2_tmux_launcher.launch.py  carLauncher.launch.py  carLauncher.py  carNeuralDriver.py  car_launch.py  expertPilot.launch.py  follow_line.launch.py  follow_line_drone.launch.py  kill_sesion.launch.py  neuralPilot.launch.py  ocean_simulation.launch.py
src/drone_driver/models/tello/: model.config  tello.sdf
src/drone_driver/src/: 3dplot.py  MiDaS_node.cpp  carControl.py  carExpertPilot.py  carNeuralPilot.py  control_functions.py  datasetGraphic.py  droneExpertPilot.py  droneNeuralPilot.py  drone_controller.py  image_filter_node.py  plotData.py  recorder.py  rosbag2generalDataset.py  sub_timestamps.npy  train.py  vel_timestamps.npy
src/drone_driver/src/plotFunctions/: datasetGraphic.py  graphPath.py  plotFrecuency.py
src/drone_driver/urdf/: tello.urdf
src/drone_driver/utils/: checkNeuralFolder.sh  generateDataset.sh  generateNeuralPilot.sh  record_rosbag.sh  trainAndCheck.sh
src/drone_driver/worlds/: montreal_line.world  nurburgring_line.world  ocean.world  ocean_simulation.world  simple_circuit.world
tello_driver/: CMakeLists.txt  package.xml
tello_driver/config/: motion_controller.yaml  state_estimator_odom.yaml  tmuxLaunch.yml  world.json
tello_driver/include/: models.py
tello_driver/launch/: neuralPilot.launch.py  remoteContol.launch.py  tello_driver.launch.py
tello_driver/src/: control_functions.py  parseWorld.py
tello_driver/src/dataset/: data.py  remoteControl.py
tello_driver/src/features/: rosbag2generalDataset.py
tello_driver/src/models/: droneNeuralPilot.py  models.py  train.py
tello_driver/src/visualization/: datasetGraphic.py  graphPath.py  plotFrecuency.py
(+136 files in other folders)
