<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_sim_driver</name>
  <version>1.0.0</version>
  <description>TODO: Driver package for drone Tello </description>
  <maintainer email="portanova2002@gmail.com">adrian</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>gazebo</depend>
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tello_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
